# inspect_k8s_sandbox

./: .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  helm-null-values-fix.md  index.html  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.devcontainer/vm/: devcontainer.json
.github/workflows/: build-devcontainer.yml  ci.yml  docs.yml  publish-devcontainer.yml  test-parallel.yml  test.yml  type-check.yml
design/complexities/: index.html
design/future/: index.html
design/limitations/: index.html
devcontainer-templates/default/: devcontainer-template.json
docs/: README.md  mkdocs.yaml  pyproject.toml
docs/docs/: CNAME  examples.md  index.md
docs/docs/design/: complexities.md  future.md  limitations.md
docs/docs/getting-started/: installation.md  local-cluster.md  prerequisites.md  remote-cluster.md  what-is-k8s.md
docs/docs/helm/: built-in-chart.md  compose-to-helm.md  custom-chart.md
docs/docs/security/: kubernetes-workloads.md  network-access.md
docs/docs/tips/: cleanup.md  configuration.md  debugging-k8s-sandboxes.md  troubleshooting.md
empty_package/: README.md
examples/: index.html
getting-started/installation/: index.html
getting-started/local-cluster/: index.html
getting-started/prerequisites/: index.html
getting-started/remote-cluster/: index.html
getting-started/what-is-k8s/: index.html
helm/built-in-chart/: index.html
helm/compose-to-helm/: index.html
helm/custom-chart/: index.html
search/: search_index.json
(+164 files in other folders)
